src/libqtreewidget.bf

public struct QTreeWidget
{
	[LinkName("QTreeWidget_new")]
	public static extern void* QTreeWidget_new(QWidget parent);
	[LinkName("QTreeWidget_new2")]
	public static extern void* QTreeWidget_new2();
	[LinkName("QTreeWidget_MetaObject")]
	public static extern QMetaObject QTreeWidget_MetaObject(void* c_this);
	[LinkName("QTreeWidget_Metacast")]
	public static extern void QTreeWidget_Metacast(void* c_this, char8[] param1);
	[LinkName("QTreeWidget_Metacall")]
	public static extern int32 QTreeWidget_Metacall(void* c_this, int64 param1, int32 param2, void param3);
	[LinkName("QTreeWidget_Tr")]
	public static extern char8[] QTreeWidget_Tr(char8[] s);
	[LinkName("QTreeWidget_ColumnCount")]
	public static extern int32 QTreeWidget_ColumnCount(void* c_this);
	[LinkName("QTreeWidget_SetColumnCount")]
	public static extern void QTreeWidget_SetColumnCount(void* c_this, int32 columns);
	[LinkName("QTreeWidget_InvisibleRootItem")]
	public static extern QTreeWidgetItem QTreeWidget_InvisibleRootItem(void* c_this);
	[LinkName("QTreeWidget_TopLevelItem")]
	public static extern QTreeWidgetItem QTreeWidget_TopLevelItem(void* c_this, int32 index);
	[LinkName("QTreeWidget_TopLevelItemCount")]
	public static extern int32 QTreeWidget_TopLevelItemCount(void* c_this);
	[LinkName("QTreeWidget_InsertTopLevelItem")]
	public static extern void QTreeWidget_InsertTopLevelItem(void* c_this, int32 index, QTreeWidgetItem item);
	[LinkName("QTreeWidget_AddTopLevelItem")]
	public static extern void QTreeWidget_AddTopLevelItem(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_TakeTopLevelItem")]
	public static extern QTreeWidgetItem QTreeWidget_TakeTopLevelItem(void* c_this, int32 index);
	[LinkName("QTreeWidget_IndexOfTopLevelItem")]
	public static extern int32 QTreeWidget_IndexOfTopLevelItem(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_InsertTopLevelItems")]
	public static extern void QTreeWidget_InsertTopLevelItems(void* c_this, int32 index, QTreeWidgetItem[] items);
	[LinkName("QTreeWidget_AddTopLevelItems")]
	public static extern void QTreeWidget_AddTopLevelItems(void* c_this, QTreeWidgetItem[] items);
	[LinkName("QTreeWidget_HeaderItem")]
	public static extern QTreeWidgetItem QTreeWidget_HeaderItem(void* c_this);
	[LinkName("QTreeWidget_SetHeaderItem")]
	public static extern void QTreeWidget_SetHeaderItem(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_SetHeaderLabels")]
	public static extern void QTreeWidget_SetHeaderLabels(void* c_this, char8[][] labels);
	[LinkName("QTreeWidget_SetHeaderLabel")]
	public static extern void QTreeWidget_SetHeaderLabel(void* c_this, char8[] label);
	[LinkName("QTreeWidget_CurrentItem")]
	public static extern QTreeWidgetItem QTreeWidget_CurrentItem(void* c_this);
	[LinkName("QTreeWidget_CurrentColumn")]
	public static extern int32 QTreeWidget_CurrentColumn(void* c_this);
	[LinkName("QTreeWidget_SetCurrentItem")]
	public static extern void QTreeWidget_SetCurrentItem(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_SetCurrentItem2")]
	public static extern void QTreeWidget_SetCurrentItem2(void* c_this, QTreeWidgetItem item, int32 column);
	[LinkName("QTreeWidget_SetCurrentItem3")]
	public static extern void QTreeWidget_SetCurrentItem3(void* c_this, QTreeWidgetItem item, int32 column, int64 command);
	[LinkName("QTreeWidget_ItemAt")]
	public static extern QTreeWidgetItem QTreeWidget_ItemAt(void* c_this, QPoint p);
	[LinkName("QTreeWidget_ItemAt2")]
	public static extern QTreeWidgetItem QTreeWidget_ItemAt2(void* c_this, int32 x, int32 y);
	[LinkName("QTreeWidget_VisualItemRect")]
	public static extern QRect QTreeWidget_VisualItemRect(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_SortColumn")]
	public static extern int32 QTreeWidget_SortColumn(void* c_this);
	[LinkName("QTreeWidget_SortItems")]
	public static extern void QTreeWidget_SortItems(void* c_this, int32 column, int64 order);
	[LinkName("QTreeWidget_EditItem")]
	public static extern void QTreeWidget_EditItem(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_OpenPersistentEditor")]
	public static extern void QTreeWidget_OpenPersistentEditor(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_ClosePersistentEditor")]
	public static extern void QTreeWidget_ClosePersistentEditor(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_IsPersistentEditorOpen")]
	public static extern bool QTreeWidget_IsPersistentEditorOpen(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_ItemWidget")]
	public static extern QWidget QTreeWidget_ItemWidget(void* c_this, QTreeWidgetItem item, int32 column);
	[LinkName("QTreeWidget_SetItemWidget")]
	public static extern void QTreeWidget_SetItemWidget(void* c_this, QTreeWidgetItem item, int32 column, QWidget widget);
	[LinkName("QTreeWidget_RemoveItemWidget")]
	public static extern void QTreeWidget_RemoveItemWidget(void* c_this, QTreeWidgetItem item, int32 column);
	[LinkName("QTreeWidget_SelectedItems")]
	public static extern QTreeWidgetItem[] QTreeWidget_SelectedItems(void* c_this);
	[LinkName("QTreeWidget_FindItems")]
	public static extern QTreeWidgetItem[] QTreeWidget_FindItems(void* c_this, char8[] text, int64 flags);
	[LinkName("QTreeWidget_ItemAbove")]
	public static extern QTreeWidgetItem QTreeWidget_ItemAbove(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_ItemBelow")]
	public static extern QTreeWidgetItem QTreeWidget_ItemBelow(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_IndexFromItem")]
	public static extern QModelIndex QTreeWidget_IndexFromItem(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_ItemFromIndex")]
	public static extern QTreeWidgetItem QTreeWidget_ItemFromIndex(void* c_this, QModelIndex index);
	[LinkName("QTreeWidget_SetSelectionModel")]
	public static extern void QTreeWidget_SetSelectionModel(void* c_this, QItemSelectionModel selectionModel);
	[LinkName("QTreeWidget_ScrollToItem")]
	public static extern void QTreeWidget_ScrollToItem(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_ExpandItem")]
	public static extern void QTreeWidget_ExpandItem(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_CollapseItem")]
	public static extern void QTreeWidget_CollapseItem(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_Clear")]
	public static extern void QTreeWidget_Clear(void* c_this);
	[LinkName("QTreeWidget_ItemPressed")]
	public static extern void QTreeWidget_ItemPressed(void* c_this, QTreeWidgetItem item, int32 column);
	[LinkName("QTreeWidget_ItemClicked")]
	public static extern void QTreeWidget_ItemClicked(void* c_this, QTreeWidgetItem item, int32 column);
	[LinkName("QTreeWidget_ItemDoubleClicked")]
	public static extern void QTreeWidget_ItemDoubleClicked(void* c_this, QTreeWidgetItem item, int32 column);
	[LinkName("QTreeWidget_ItemActivated")]
	public static extern void QTreeWidget_ItemActivated(void* c_this, QTreeWidgetItem item, int32 column);
	[LinkName("QTreeWidget_ItemEntered")]
	public static extern void QTreeWidget_ItemEntered(void* c_this, QTreeWidgetItem item, int32 column);
	[LinkName("QTreeWidget_ItemChanged")]
	public static extern void QTreeWidget_ItemChanged(void* c_this, QTreeWidgetItem item, int32 column);
	[LinkName("QTreeWidget_ItemExpanded")]
	public static extern void QTreeWidget_ItemExpanded(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_ItemCollapsed")]
	public static extern void QTreeWidget_ItemCollapsed(void* c_this, QTreeWidgetItem item);
	[LinkName("QTreeWidget_CurrentItemChanged")]
	public static extern void QTreeWidget_CurrentItemChanged(void* c_this, QTreeWidgetItem current, QTreeWidgetItem previous);
	[LinkName("QTreeWidget_ItemSelectionChanged")]
	public static extern void QTreeWidget_ItemSelectionChanged(void* c_this);
	[LinkName("QTreeWidget_Event")]
	public static extern bool QTreeWidget_Event(void* c_this, QEvent e);
	[LinkName("QTreeWidget_MimeTypes")]
	public static extern char8[][] QTreeWidget_MimeTypes(void* c_this);
	[LinkName("QTreeWidget_MimeData")]
	public static extern QMimeData QTreeWidget_MimeData(void* c_this, QTreeWidgetItem[] items);
	[LinkName("QTreeWidget_DropMimeData")]
	public static extern bool QTreeWidget_DropMimeData(void* c_this, QTreeWidgetItem parent, int32 index, QMimeData data, int64 action);
	[LinkName("QTreeWidget_SupportedDropActions")]
	public static extern int64 QTreeWidget_SupportedDropActions(void* c_this);
	[LinkName("QTreeWidget_DropEvent")]
	public static extern void QTreeWidget_DropEvent(void* c_this, QDropEvent event);
	[LinkName("QTreeWidget_Tr2")]
	public static extern char8[] QTreeWidget_Tr2(char8[] s, char8[] c);
	[LinkName("QTreeWidget_Tr3")]
	public static extern char8[] QTreeWidget_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QTreeWidget_EditItem2")]
	public static extern void QTreeWidget_EditItem2(void* c_this, QTreeWidgetItem item, int32 column);
	[LinkName("QTreeWidget_OpenPersistentEditor2")]
	public static extern void QTreeWidget_OpenPersistentEditor2(void* c_this, QTreeWidgetItem item, int32 column);
	[LinkName("QTreeWidget_ClosePersistentEditor2")]
	public static extern void QTreeWidget_ClosePersistentEditor2(void* c_this, QTreeWidgetItem item, int32 column);
	[LinkName("QTreeWidget_IsPersistentEditorOpen2")]
	public static extern bool QTreeWidget_IsPersistentEditorOpen2(void* c_this, QTreeWidgetItem item, int32 column);
	[LinkName("QTreeWidget_FindItems3")]
	public static extern QTreeWidgetItem[] QTreeWidget_FindItems3(void* c_this, char8[] text, int64 flags, int32 column);
	[LinkName("QTreeWidget_IndexFromItem2")]
	public static extern QModelIndex QTreeWidget_IndexFromItem2(void* c_this, QTreeWidgetItem item, int32 column);
	[LinkName("QTreeWidget_ScrollToItem2")]
	public static extern void QTreeWidget_ScrollToItem2(void* c_this, QTreeWidgetItem item, int64 hint);
}